# byebyework

./: README.md  dockerfile  main.py  pyproject.toml
src/byebyework/models/: active_function.py
src/byebyework/models/examples/: data_preprocess.sh
src/byebyework/models/examples/data/: process_ml_1m.py  split.py
src/byebyework/models/rank/: DIN.py
