[tool.poetry]
name = "byebyework"
version = "0.1.0"
description = ""
authors = ["asher <asher_github@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.2"
loguru = "^0.7.2"
numpy = "^1.26.4"
torch = "^2.2.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"


[tool.poetry.group.dev.dependencies]
py27hash = "^1.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
